--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,14 +9,13 @@
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link href="/css/project.css" rel="stylesheet">
-    <link href="/css/navbar-responsive.css" rel="stylesheet">
-
-    {{#if cssFile}}
-    <link href="/css/{{cssFile}}" rel="stylesheet">
-    {{/if}}
+    <script src="https://kit.fontawesome.com/ca0d395c8b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="/css/project.css" rel="stylesheet" />
+    <link href="/css/color.css" rel="stylesheet" />
+    <link href="/css/hover_and_click.css" rel="stylesheet" />
+    <link href="/css/font_size.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -25,8 +24,8 @@
             <div class="row header align-items-center justify-content-between flex-row"
                 style="min-height: 60px; padding: 0; width: 100%;">
                 <div class="col-auto">
-                    <a href="/">
-                        <img class="logo" src="/img/app-icon.png" alt="logo"
+                    <a href="#home">
+                        <img class="logo" src="/img/logo.png" alt="logo"
                             style="height: 40px; width: 40px; margin-left: 40px;" />
                     </a>
                 </div>
@@ -46,9 +45,6 @@
                             <i class="bi bi-chevron-down" style="color: #5051F9;"></i>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropDownMenu">
-                            <span id="profile-dropdown" class="dropdown-item"
-                                style="pointer-events: none; cursor: default;"></span>
-                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Profile</a>
                             <a class="dropdown-item" href="#">Settings</a>
                             <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
@@ -58,7 +54,7 @@
             </div>
             <div class="main flex-grow-1" style="display: flex; flex-direction: row; width: 100%;">
                 <div class="sidebar d-flex flex-column justify-content-evenly" style="width: 120px;">
-                    <a href="/">
+                    <a class="active" href="#home">
                         <div class="sidebar-element">
                             <div class="icon">
                                 <i class="bi bi-house-heart"></i>
@@ -68,7 +64,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="active" href="#home">
+                    <a href="#home">
                         <div class="sidebar-element">
                             <div class="icon">
                                 <i class="bi bi-kanban"></i>
@@ -119,62 +115,39 @@
                         </div>
                     </a>
                 </div>
-                <div class="main-content"
-                    style="background-color: #f3f4f8; display: flex; flex-direction: column; width: calc(100% - 120px);">
-                    <nav id="func-navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-                        <div class="container-fluid">
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                    <li class="nav-item"><a href="/project/{{projectId}}/overview"
-                                            class="nav-link">Overview</a></li>
-                                    <li class="nav-item"><a href="/project/{{projectId}}/requirement"
-                                            class="nav-link">Requirement</a></li>
-                                    <li class="nav-item"><a href="/project/{{projectId}}/module"
-                                            class="nav-link">Modules</a></li>
-                                    <li class="nav-item"><a href="/project/{{projectId}}/release"
-                                            class="nav-link">Release</a></li>
-                                    <li class="nav-item"><a href="/project/{{projectId}}/testcase"
-                                            class="nav-link">Testcase</a></li>
-                                    <li class="nav-item"><a href="/project/{{projectId}}/testplan" class="nav-link">Test
-                                            Plan</a></li>
-                                    <li class="nav-item"><a href="/project/{{projectId}}/testrun" class="nav-link">Test
-                                            Run & Result</a></li>
-                                    <li class="nav-item"><a href="/project/{{projectId}}/issues"
-                                            class="nav-link">Issues</a></li>
-                                    <li class="nav-item"><a href="/project/{{projectId}}/report"
-                                            class="nav-link">Reports</a></li>
-                                </ul>
-                            </div>
+
+                {{{body}}}
+
+                <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                    <div id="right-below-toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                        <div class="toast-header">
+                            <img src="/img/logo.png" class="rounded me-2" alt="..." style="height: 1.2rem;" />
+                            <strong class="me-auto">Server Notification</strong>
+                            <small>Just now</small>
+                            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                         </div>
-                    </nav>
-                    <div class="project-info d-flex justify-content-between align-items-center"
-                        style="height: 8vh; text-align: center; margin: 0 80px; min-height: 70px;">
-                        <nav class="project-detail-nav" style="display: inline-block;">
-                            <a href="#">Project</a>
-                            <a href="#">{{projectName}}</a>
-                            {{#if part}}
-                                <a href="#">{{part}}</a>
-                            {{/if}}
-                        </nav>
-                        {{{content "additional-button"}}}
-                    </div>
-                    <div class="main-area flex-grow-1 px-3" style="min-height: 600px;">
-                        {{{body}}}
+                        <div class="toast-body"></div>
                     </div>
                 </div>
+
+                {{{content "modal"}}}
+
+                 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+                <script src="/js/showToast.js"></script>
+
+                {{{content "script"}}}
             </div>
         </div>
+    </div>
     </div>
 
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
         <div id="right-below-toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
-                <img src="/img/app-icon.png" class="rounded me-2" alt="..." style="height: 1.2rem;">
+                <img src="/img/logo.png" class="rounded me-2" alt="..." style="height: 1.2rem;" />
                 <strong class="me-auto">Server Notification</strong>
                 <small>Just now</small>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -182,75 +155,8 @@
             <div class="toast-body"></div>
         </div>
     </div>
-
-    {{{content "modal"}}}
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <script src="/js/navBarResponsive.js"></script>
-    <script src="/js/showToast.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script>
-        // Function to handle logout
-        function logout() {
-            axios.post('/auth/logout', {}, {
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                withCredentials: true
-            })
-                .then((response) => {
-                    if (response.status === 200) {
-                        document.cookie = "refreshToken=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
-                        window.location.href = "/";
-                    } else {
-                        console.error("Error:", response.statusText);
-                    }
-                })
-                .catch((error) => {
-                    console.error("Error:", error);
-                });
-        }
-
-        // Function to update profile dropdown with Name and Role
-        function updateProfileDropdown() {
-            axios.get('/auth/info', {}, {
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                withCredentials: true
-            })
-                .then((response) => {
-                    if (response.status === 200) {
-                        const profileDropdown = document.getElementById('profile-dropdown');
-                        if (profileDropdown) {
-                            profileDropdown.innerHTML = `${response.data.name}`;
-                        }
-                    } else {
-                        console.error("Error:", response.statusText);
-                    }
-                })
-                .catch((error) => {
-                    console.error("Error:", error);
-                });
-        }
-
-        // Call updateProfileDropdown when dropdown is clicked
-        const dropdownMenu = document.getElementById('dropDownMenu');
-        if (dropdownMenu) {
-            dropdownMenu.addEventListener('click', updateProfileDropdown);
-        }
-
-        //Tooltip
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl)
-        })
-    </script>
-
-
-    {{{content "script"}}}
 </body>
+
+
 
 </html>
