--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -12,6 +12,7 @@
     <script src="https://kit.fontawesome.com/ca0d395c8b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.css">
     <link href="/css/project.css" rel="stylesheet" />
     <link href="/css/color.css" rel="stylesheet" />
     <link href="/css/hover_and_click.css" rel="stylesheet" />
